--- a/main.tex
+++ b/main.tex
@@ -67,6 +67,7 @@
 \usepackage{booktabs}
 \usepackage{enumitem}
 \usepackage{multicol}
+\usepackage{physics}
 \input{simbolos}
 
 \newenvironment{kmatrix}[1][1.3cm]{
@@ -100,13 +101,13 @@
 
     For each question, give the answer and a short justification.
 
-    \input{texts/013}
-    \input{texts/018}
-    \input{texts/036}
-    \input{texts/062}
-    \input{texts/082}
-    \input{texts/094}
-    \input{texts/119}
+    \input{texts/013} \newpage
+    \input{texts/018} \newpage
+    \input{texts/036} \newpage
+    \input{texts/062} \newpage
+    \input{texts/082} \newpage
+    \input{texts/094} \newpage
+    \input{texts/119} \newpage
     \input{texts/130}
 
 \end{document}
