--- a/references.bib
+++ b/references.bib
@@ -8,6 +8,18 @@
     publisher={Cambridge University Press}
 }
 
+@article{diameter,
+    author = {Béla Bollobás and Oliver Riordan},
+    year = {2004},
+    month = {07},
+    pages = {5-34},
+    title = {The Diameter of a Scale-Free Random Graph},
+    journal = {Combinatorica},
+    volume = {24},
+    doi = {10.1007/s00493-004-0002-2},
+    url = {https://www.math.cmu.edu/users/af1p/Teaching/INFONET/Papers/PowerLaw/swdiam.pdf}
+}
+
 @article{heymans,
     title = {Global Patterns in Ecological Indicators of Marine Food Webs: A Modelling Approach},
     author = {Heymans, Johanna and Coll, Marta and Libralato, Simone and Morissette, Lyne and Christensen, Villy},
