--- a/texts/130.tex
+++ b/texts/130.tex
@@ -21,3 +21,14 @@ Select the alternative that lists the correct statements:
 \end{enumerate}
 
 Original idea by: Heitor Mattosinho
+
+
+\subsection*{Answer: E}
+
+\begin{enumerate}[label={\Roman*.}]
+    \item True.
+    \item False. Any uniform graph is perfectly assortative, including cycles and complete bipartite graphs.
+    \item True.
+    \item True.
+    \item False. There's $r_{\text{in},\text{in}}$ and $r_{\text{out},\text{out}}$ too.
+\end{enumerate}
