--- a/texts/036.tex
+++ b/texts/036.tex
@@ -11,3 +11,21 @@ Consider a Random Network such that $N = 1000$ and $p = 0.004$. We need to break
 \end{enumerate}
 
 Original idea by: José Nascimento
+
+
+\subsection*{Answer: A}
+
+Using the Binomal distribution, we have \[
+    \langle k \rangle = p (N - 1) = 3.996
+\] And \[
+    \left\langle k^2 \right\rangle = p (1-p) (N-1) + p^2 (N-1)^2 = 19.948
+\]
+
+Therefore, the critical threshold as given by the Molloy-Reed criterion is
+\begin{align*}
+    f_c &= 1 - \frac{1}{\frac{\left\langle k^2 \right\rangle}{\left\langle k \right\rangle} - 1} \\
+    &= 1 - \frac{1}{\frac{19.948}{3.996} - 1} \\
+    &= 0.7495
+\end{align*}
+
+Then the giant component should start to break apart after $f_c \cdot N = 749.5$ nodes are removed.
