--- a/texts/013.tex
+++ b/texts/013.tex
@@ -22,7 +22,7 @@ Original idea by: Maria Tejada Begazo
         &= 3 x^2 (1 + \ln x)^2 + x^3 \cdot 2 (1 + \ln x) \dv{(1 + \ln x)}{x}
             \tag*{(by Chain Rule)} \\
         &= 3 x^2 (1 + \ln x)^2 + 2 x^3 (1 + \ln x) \dv{1}{x} + 2 x^3 (1 + \ln x) \dv{\ln x}{x} \\
-        &= 3 x^2 (1 + \ln x)^2 + 2 x^3 (1 + \ln x) \frac{1}{x} \\
+        &= 3 x^2 (1 + \ln x)^2 + 0 + 2 x^3 (1 + \ln x) \frac{1}{x} \\
         &= x^2 (1 + \ln x) \cdot (3 (1 + \ln x) + 2) \\
         &= x^2 (1 + \ln x) (5 + 3 \ln x)
 \end{align*}
