--- a/texts/094.tex
+++ b/texts/094.tex
@@ -43,7 +43,7 @@ Original Idea by Rómulo Condori
 
     As specified, at $t = 1 \text{h}$, $L(1) = 3 l_0 / 4$, therefore
     \begin{align*}
-        L(1) = \sqrt{2 k + l_0^2} &= \frac{3 l_0}{4} \\
+        L(1) = \sqrt{2 k \cdot 1 + l_0^2} &= \frac{3 l_0}{4} \\
             2 k + l_0^2 &= \frac{9 l_0^2}{16} \\
             32 k + 16 l_0^2 &= 9 l_0^2 \\
             32 k + 7 l_0^2 &= 0 \\
