--- a/texts/119.tex
+++ b/texts/119.tex
@@ -33,11 +33,11 @@ Original ideia by: Filipe Maciel Roberto
 
 The given digraph is acyclic, therefore the finishing time must form a topological sorting of its vertices.
 
-For \textbf{A.}, we have 18 as a successor to 19 in the topological order, but there's aa back arc from 18 to 19, invalidating this order.
+For \textbf{A.}, we have 18 as a successor to 19 in the topological order, but there's a back arc from 18 to 19, invalidating this order.
 
-For \textbf{B.}, there's an arc from 10 to 20. In fact, the start node must be the last with the largest finishing time.
+For \textbf{B.}, there's an arc from 10 to 20. In fact, the start node is the last to finish and  must have the largest finishing time.
 
-For \textbf{C.}, the topological is valid:
+For \textbf{C.}, the topological order is valid:
 
 \begin{figure}[H]
     \centering
